# z-agent

./: .env.example  .gitignore  .mcp.json  .venv  AGENTS.md  CLAUDE.md  DEBUG.md  NOTICE  README.md  STATUS.md  conftest.py  constraints.txt  progress.md  pyproject.toml  sim.sh
.gemini/: settings.json
.sdd/: status.json
agents/devlog/: status.md
config/: default.yaml  visual_acceptance_rubric.yaml  visual_attended_rubric.yaml  visual_temporal_rubric.yaml
docker/isaac-sim/: Dockerfile  docker-compose.yaml
docs/: ADR-001-navigate-convergence.md  ADR-002-visual-acceptance.md  ARCHITECTURE.md  CLI_UX_REDESIGN.md  DECISIONS.md  LESSONS.md  RULES.md  VERIFY.md  WIRING.md  agent-kernel-STATUS.md  agent-kernel-phase-b-plan.md  agent-kernel-phase-c-plan.md  agent-kernel-phase-d-plan.md  agent-kernel-phase-e-plan.md  agent-kernel-stage5-plan.md  agent-kernel.md  cli-tool-system.md  decisions-index.md  getting-started.md  pick_top_down_known_issues.md  pick_top_down_spec.md  plan-find-grasp-refactor.md  reference.md  sim-dev-guide.md  skill-protocol.md  sysnav_integration.md  sysnav_simulation.md  tricky-bugs.md  verify.md
docs/architecture-decisions/: ADR-003-hardware-abstraction-layer.md  ADR-005-isaac-sim-integration.md  ADR-006-agent-kernel-world-plugin.md  ADR-007-closed-loop-controller.md  ADR-008-playground-parallel-track.md
docs/archive/: agent-kernel-phase-b-plan.md  agent-kernel.md
docs/rules/: debugging.md  doc-governance.md  gates.md  red-team.md  sim-safety.md  standards.md
docs/wiring/: embodiments.md  native-loop.md  verify-spine.md
examples/: byo_world.py  custom_skill.py  no_llm.py  quickstart.py  ros2_mode.py  simulation.py
foxglove/: launch_foxglove.sh  vector-os-dashboard.json  zeno-go2w-dashboard.json
loop/: GOAL.md  MANIFEST.sha256  README.md  REVIEW.md  ROUND.md  board.py  check.sh  checks_allowlist.txt  checks_anchors.py  checks_schema.py  elp.json  preflight.sh  run.sh
loop/harness/: claude.sh  custom.example.sh
loop/inbox/: decisions.jsonl
loop/ledger/: BOARD.md  acceptance.jsonl  experiments.jsonl  gates.jsonl  rounds.jsonl
scratchpad/: catfirm_campaign.sh  catplace_firm.sh  diag_place.py  diag_place_R13.out  dino_probe.py  g1_accept.py  g1_eyes.py  g1_mat_probe.py  g1_nav_probe.py  g1_scene_probe.py  g1_vln_chain_probe.py  g1_vln_probe.py  g1_vln_redteam.py  grasp_probe.py  measure_qwen.py  place_analyze.py  place_campaign.sh  place_eyes_probe.py  place_probe.py  repl_accept.py  run_measure_qwen.sh  run_neg.sh  run_neg2.sh  run_probe.out  run_probe.sh  run_probe2.out  simstart_isolate_probe.py  simstart_stream_probe.py  simstart_toolcall_probe.py  trace_place_native.out  trace_place_native.py
scripts/: add_spdx_headers.py  dash  debug_r256_full_place.py  debug_r256_midwalk_drop.py  g1_capstone_demo.py  gen_decisions_index.py  go2_demo.py  go2_nav_bridge.py  go2_vnav_bridge.py  install-launcher.sh  launch_bridge.sh  launch_explore.sh  launch_isaac.sh  launch_nav2.sh  launch_slam.sh  launch_vnav.sh  probe_r1_g1_room.py  probe_r2_g1_walk.py  probe_r36_producer_routes_detect.py  probe_r37_box_flow_composition.py  probe_r37_cold_turn_rebind.py  probe_r38_nav_grasp_chain.py  probe_r39_debug_floor_vs_cans.py  probe_r39_e2e_green_red.py  probe_r39_nav_grasp_dock.py  probe_r39_reperceive_after_seat.py  probe_r3_g1_nav.py  probe_r40_e2e_reliable.py  probe_r4_g1_detect.py  probe_r5_g1_detect_ran.py  probe_r8_g1_obstacle_nav.py  r7_g1_grounded_demo.py  r7_probe.py  run-tests  sim-teardown  smoke_sysnav_sim.py  split_ledger.py  stop_gazebo.sh  stop_isaac.sh  test_fullstack.sh  (+11 more)
tests/: __init__.py  conftest.py  verify_compat.py
tests/e2e/: test_explore_navigate_e2e.py
tests/harness/: conftest.py  fake_backend.py  nav_debug_helpers.py  pty_cli.py  test_abort.py  test_depth_projection_groundtruth.py  test_expect_deadline_budget.py  test_eyes_frame_ordering.py  test_level0_physics.py  test_level10_auto_look.py  test_level12_tare_chain.py  test_level13_depth.py  test_level16_explore_nav.py  test_level17_tare_warmup.py  test_level18_wall_clearance.py  test_level19_detector_cleanup.py  test_level1_camera_vlm.py  test_level20_sensor_pipeline.py  test_level25_nav_integration.py  test_level26_vlm_reliability.py  test_level29_pre_explore_nav.py  test_level2_scene_skills.py  test_level30_terrain_persist.py  test_level33_nav_pipeline.py  test_level34_door_learning.py  test_level34b_nearest_room.py  test_level34c_explore_door_learning.py  test_level35_hardcode_free_nav.py  test_level35b_proxy_door_chain.py  test_level37_local_vlm.py  test_level38_room_layout.py  test_level41_vgg_types_verifier.py  test_level42_primitives.py  test_level43_goal_decomposer.py  test_level44_strategy_selector.py  test_level45_goal_executor.py  (+26 more)
tools/: _ik_align_tol.py  _ik_envelope_sweep.py  _ik_probe_once.py  _live_grasp_go2piper_once.py  measure_fetch_reliability.py  measure_go2piper_grasp_reliability.py  measure_grasp_reliability.py  verify_fetch_cli.py  verify_fetch_flow.py  verify_home_dof.py  verify_localize_scenegraph.py  verify_navigate_to_object.py  visual_go2piper_grasp.py  visual_grasp.py
zeno/: __init__.py  version.py
(+756 files in other folders)
