[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-os-nano"
version = "0.1.0"
description = "Natural language robot arm control SDK"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Vector Robotics"}]
keywords = ["robotics", "ros2", "robot-arm", "llm", "natural-language", "so-101"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    # --- Agent kernel (cross-platform, macOS-friendly; no robot/ROS2 deps) ---
    "rich>=13.0",            # CLI rendering (hard-imported by vcli/cli.py)
    "prompt_toolkit>=3.0",   # CLI REPL (hard-imported by vcli/cli.py)
    "httpx>=0.25",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",    # repo-root .env credential loading (vcli/config.py, every CLI startup)
    "anthropic>=0.40",
    "openai>=1.0",
    # numpy/pyserial are robot/perception-leaning but kept in core for now:
    # the kernel import path is numpy-free, but several lazily-loaded tools and
    # the vector-os-mcp entry point assume they are present. Slated to move to
    # the sim/real tiers in a guarded follow-up.
    "numpy>=1.24",
    "pyserial>=3.5",
]

[project.optional-dependencies]
# Tiers: base install = agent kernel only. Robot/sim/perception/hardware are opt-in.
#   [sim]        -> MuJoCo simulation (macOS-friendly)
#   [perception] -> VLM + tracker + pointcloud (torch stack; MPS on macOS)
#   [real]       -> physical-camera / hardware-only native deps (Linux/USB-leaning)
#   [ik] [go2]   -> kinematics / MPC
#   [ros2]       -> apt-installed, not pip
#   [mcp]        -> MCP server

# Simulation: MuJoCo (the primary, cross-platform sim backend)
sim = [
    "mujoco>=3.0",
]

# Perception: VLM detection + EdgeTAM tracker + pointcloud (no robot/USB deps).
# These were previously undeclared despite being imported by perception/.
perception = [
    "torch>=2.2",
    "transformers>=4.40",
    "pillow>=10",
    "huggingface_hub>=0.23",
    "scipy>=1.11",
    "opencv-python>=4.8",
]

gpu = [
    "vector-os-nano[perception]",
]

# Real hardware / physical cameras: native deps that are Linux/USB-leaning and
# painful or unavailable on macOS arm64. Kept out of [all].
real = [
    "pyrealsense2>=2.50",
    "open3d>=0.17",
    "pybullet>=3.2",
]

# IK: Inverse kinematics solver
# pin (Pinocchio) >=3.9.0 for SO-101 URDF compatibility
ik = [
    "pin>=3.9.0",
]

# ROS2 integration (packages installed via apt, not pip)
ros2 = [
    # ros-humble-rclpy
    # ros-humble-launch-ros
    # ros-humble-sensor-msgs
]

mcp = [
    "mcp>=1.0",
]

# Go2 quadruped locomotion: Pinocchio kinematics + CasADi for MPC
go2 = ["casadi>=3.6", "pin>=3.0"]

# Mac-installable union (excludes [real] hardware-only native deps)
# NOTE: go2 MUST be here — it carries casadi (the convex-MPC QP solver). Omitting
# it ships a Go2 sim whose MPC gait silently fails every tick (no walk). See
# docs/tricky-bugs.md Case 0 "Go2 won't walk — casadi missing from [all]".
all = [
    "vector-os-nano[sim,perception,ik,mcp,go2]",
]

# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "lark",
]

[project.scripts]
vector-os-mcp = "vector_os_nano.mcp.server:main_sync"
vector-cli = "vector_os_nano.vcli.cli:main"
vector-eval = "vector_os_nano.vcli.eval_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["vector_os_nano"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:launch_ros -p no:launch_testing -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint"
markers = [
    "level0: Level 0 — MuJoCo physics validity (no MuJoCoGo2 wrapper required)",
    "level1: Level 1 — PD standing stability",
    "level2: Level 2 — Open-loop locomotion / walking",
    "level3: Level 3 — Velocity tracking via set_velocity()",
    "level4: Level 4 — Navigation to waypoint (P-controller placeholder)",
    "ros2: requires rclpy installed and a live DDS context",
    "integration: hits a real backend (e.g. headless MuJoCo); deselect with -m 'not integration'",
    "live_llm: hits a real LLM backend; skipped unless VECTOR_LIVE_LLM=1; deselect with -m 'not live_llm'",
    "cli_main: exercises the REAL cli.main entrypoint (PTY/-p/--json verdict); CI acceptance gate, select with -m cli_main",
    "capability: a claimed product capability; MUST also carry @pytest.mark.cli_main so it is verified through the real product, never a bypass script",
]
